; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_22848.c_printe.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_22848.c_printe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"(error: %s)\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @printe(i8* %0, i16 signext %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i16, align 2
  store i8* %0, i8** %3, align 8
  store i16 %1, i16* %4, align 2
  %5 = load i32, i32* @stderr, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 @fprintf(i32 %5, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* %6)
  %8 = load i16, i16* %4, align 2
  %9 = icmp ne i16 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = call i32 @exit(i32 1) #3
  unreachable

12:                                               ; preds = %2
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
